--- a/PEC1_Ej2_1/style.css
+++ b/PEC1_Ej2_1/style.css
@@ -36,7 +36,7 @@ p{
 
 }
 
-.main{
+.container{
     display:flex;
     flex-direction: column;
     align-items: center;    
@@ -59,7 +59,7 @@ form{
 
 
 
-.input{
+.form-control{
     display:flex;
     flex-direction: column;
     align-items: flex-start;
@@ -68,7 +68,13 @@ form{
     padding:0 25px;
 }
 
-input{
+
+
+
+
+
+
+.form-control input{
     padding-left: 10px;
     width:100%;
     height:35px;
@@ -97,26 +103,30 @@ input{
 }
 
 
+.form-control input:focus{
+    outline:0;
+    color:grey;
+}
 
-/*Pseudo selectores de input*/
-input::placeholder{
-    color:rgb(189, 189, 189);
-    padding-left: 10px;
+.form-control.success input{
+    border-color:green;
 }
 
 
-input::title{
-    display:block;
+.form-control.error input{
+    border-color:red;
 }
 
-input:valid:focus{
-    outline:2px solid rgb(129, 236, 129);
+
+.form-control small{
+    color:red;
+    visibility:hidden;
 }
 
-input:invalid:focus{
-    outline:2px solid red;
-
+.form-control.error small{
+    visibility:visible;
 }
+
 
 
 
